Fix dark mode bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -504,6 +504,7 @@ input[type=text], input[type=email], textarea[type=text], select {
     margin-left: 0;
     resize: none;
     font-size: 11.5pt;
+    background-color: RGBA(0, 0, 0, 0);
 }
 
 input[type=submit] {
